Added new header and source code files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,15 @@ include_directories(includes/algorithms/basic_functions)
 include_directories(includes/algorithms/rsa)
 include_directories(includes/random)
 include_directories(includes/algorithms/check_simple)
+include_directories(includes/utilities/utilities.hpp)
+
 
 set(SRCS     srcs/file/file.cpp
             srcs/encrypt.cpp
             srcs/decrypt.cpp
             srcs/random/random.cpp
             srcs/algorithms/check_simple/miller_rabin_test.cpp
+            srcs/utilities/utilities.cpp
             srcs/main.cpp)
 
 set(CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "" FORCE)
